; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/ap/extr_wpa_auth.c_wpa_replay_counter_valid.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/ap/extr_wpa_auth.c_wpa_replay_counter_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_key_replay_counter = type { i32, i32 }

@RSNA_MAX_EAPOL_RETRIES = common dso_local global i32 0, align 4
@WPA_REPLAY_COUNTER_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpa_key_replay_counter*, i32*)* @wpa_replay_counter_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wpa_replay_counter_valid(%struct.wpa_key_replay_counter* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wpa_key_replay_counter*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.wpa_key_replay_counter* %0, %struct.wpa_key_replay_counter** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %33, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @RSNA_MAX_EAPOL_RETRIES, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %36

11:                                               ; preds = %7
  %12 = load %struct.wpa_key_replay_counter*, %struct.wpa_key_replay_counter** %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.wpa_key_replay_counter, %struct.wpa_key_replay_counter* %12, i64 %14
  %16 = getelementptr inbounds %struct.wpa_key_replay_counter, %struct.wpa_key_replay_counter* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %11
  br label %36

20:                                               ; preds = %11
  %21 = load i32*, i32** %5, align 8
  %22 = load %struct.wpa_key_replay_counter*, %struct.wpa_key_replay_counter** %4, align 8
  %23 = load i32, i32* %6, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.wpa_key_replay_counter, %struct.wpa_key_replay_counter* %22, i64 %24
  %26 = getelementptr inbounds %struct.wpa_key_replay_counter, %struct.wpa_key_replay_counter* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @WPA_REPLAY_COUNTER_LEN, align 4
  %29 = call i64 @memcmp(i32* %21, i32 %27, i32 %28)
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %37

32:                                               ; preds = %20
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %7

36:                                               ; preds = %19, %7
  store i32 0, i32* %3, align 4
  br label %37

37:                                               ; preds = %36, %31
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i64 @memcmp(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
